# Galcode_island

./: .editorconfig  .env.example  .gitignore  README.md  To_do_list.txt  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  前后端分析.txt  后端技术路径.txt  后端接口.txt  大模型.txt  当前分析.txt  技术路径.txt  提示词.txt
CodeIsland-main/: CHANGELOG.md
CodeIsland-main/scripts/: update-appcast.sh
docs/: architecture.md  character-and-prompts.md  ipc-protocol.md
scripts/: demo_agent.py  prepare-runtime.mjs  run-demo.ps1
src/: App.css  App.jsx  App.tsx  ErrorBoundary.tsx  HaruhiStage.jsx  index.css  jsx-shim.d.ts  main.tsx
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/hooks/: galcode-opencode.js
src-tauri/src/: lib.rs  main.rs  window_utils.rs
src-tauri/src/agent/: binary.rs  claude.rs  codex.rs  config.rs  demo.rs  launcher.rs  manager.rs  mod.rs  opencode.rs  preferences.rs  proc.rs  proxy.rs  runtime.rs  stream.rs  sysutils.rs
src-tauri/src/hook/: event.rs  ingest.rs  mod.rs  normalizer.rs  parser.rs  server.rs  watcher.rs
src-tauri/src/hook/installer/: mod.rs  opencode.rs
src-tauri/src/ipc/: commands.rs  events.rs  mod.rs  tray.rs
src-tauri/src/llm/: client.rs  mod.rs  prompt.rs
src-tauri/src/session/: cleanup.rs  mod.rs  snapshot.rs  state.rs
src/components/: AppErrorBoundary.tsx  GlobalTopBar.tsx  MainView.tsx  PermissionPrompt.tsx  TabBar.tsx
src/hooks/: useActiveTab.ts  useAgentIPC.ts  (+5 more)
(+48 files in other folders)
